frontend/test/should_pass/exectype_InSetmapUntyped2.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int> =set<int>{} && y in x);
	}
}