frontend/test/should_fail/exectype_InSetmap.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=42 && y:int=3 && y in x);
	}
}